alpine/Dockerfile: install coreutils
coreutils is used to generate date in the future

Signed-off-by: talset <talset55@gmail.com>

--- a/dockerfiles/alpine/Dockerfile
+++ b/dockerfiles/alpine/Dockerfile
@@ -16,7 +16,8 @@ RUN apk --no-cache add \
   openssh \
   perl \
   tar \
-  libstdc++
+  libstdc++ \
+  coreutils
 
 WORKDIR /root
 RUN git clone https://github.com/proxytunnel/proxytunnel.git && \
