use image args for FROM, use golang-builder
concourse/concourse#6425

Signed-off-by: Alex Suraci <suraci.alex@gmail.com>

--- a/dockerfiles/alpine/Dockerfile
+++ b/dockerfiles/alpine/Dockerfile
@@ -1,6 +1,6 @@
-# temporaily use alpine:3 since alpine:edge uses musl-1.2.1 which breaks
-# docker for mac due to (lack of) ipv6 dns resolution
-FROM alpine:3 AS resource
+ARG base_image=alpine:latest
+
+FROM ${base_image} AS resource
 
 RUN apk --no-cache add \
   bash \
