update os layer packages
latest tagged os images don't always contain the latest version of
system libs

Signed-off-by: Taylor Silva <tsilva@pivotal.io>

--- a/dockerfiles/alpine/Dockerfile
+++ b/dockerfiles/alpine/Dockerfile
@@ -2,6 +2,7 @@ ARG base_image=alpine:latest
 
 FROM ${base_image} AS resource
 
+RUN apk update && apk upgrade
 RUN apk --no-cache add \
   bash \
   curl \
