Ensure config updates don't block waiting for prompt
Signed-off-by: Taylor Silva <tsilva@pivotal.io>

--- a/dockerfiles/ubuntu/Dockerfile
+++ b/dockerfiles/ubuntu/Dockerfile
@@ -2,8 +2,8 @@ ARG base_image
 
 FROM ${base_image} AS resource
 
-RUN apt-get update \
-  && apt-get install -y --no-install-recommends \
+RUN apt update && apt upgrade -y -o Dpkg::Options::="--force-confdef"
+RUN apt install -y --no-install-recommends \
     curl \
     gnupg \
     gzip \
