--- a/dockerfiles/alpine/Dockerfile
+++ b/dockerfiles/alpine/Dockerfile
@@ -31,6 +31,7 @@ RUN git clone https://github.com/proxytunnel/proxytunnel.git && \
 
 RUN git config --global user.email "git@localhost"
 RUN git config --global user.name "git"
+RUN git config --global pull.rebase "false"
 
 ADD assets/ /opt/resource/
 RUN chmod +x /opt/resource/*
