--- a/dockerfiles/ubuntu/Dockerfile
+++ b/dockerfiles/ubuntu/Dockerfile
@@ -40,6 +40,7 @@ RUN git config --global protocol.file.allow "always"
 ADD assets/ /opt/resource/
 RUN chmod +x /opt/resource/*
 
+ENV CXXFLAGS -DOPENSSL_API_COMPAT=0x30000000L
 ADD scripts/install_git_crypt.sh install_git_crypt.sh
 RUN ./install_git_crypt.sh && rm ./install_git_crypt.sh
 
