Fix alpine build
since alpine sha256:e54013ea619fb2914af39087e0a8b0863b4ac3c498b5459b9f166514ed000147
the build failed by openssl error so the flag is added just like
the one in ubuntu.

It also failed by missing `git`, with error that libexec/git-core/git
and bin/git is actually Sysmbolic link loop. I couldn't figure out why
it deletes git and recreate symbolic link in the original code. Maybe
a change in alpine that make our code invalid anymore.

It ended up following the ubuntu dockerfile for those links. Since tests
are passing so I assume the changes should not be breaking anything.

Signed-off-by: Rui Yang <ruiya@vmware.com>

--- a/dockerfiles/alpine/Dockerfile
+++ b/dockerfiles/alpine/Dockerfile
@@ -170,16 +170,13 @@ RUN             rm -f \
 
 WORKDIR         /usr/bin
 RUN             rm -f \
-                    git \
                     git-cvsserver \
                     git-shell \
                     git-receive-pack \
                     git-upload-pack \
                     git-upload-archive &&\
-                ln -s ../libexec/git-core/git git &&\
-                ln -s ../libexec/git-core/git-shell git-shell &&\
-                ln -s ../libexec/git-core/git git-upload-archive &&\
-                ln -s ../libexec/git-core/git-upload-pack git-upload-pack
+                ln -s git git-upload-archive &&\
+                ln -s git git-crypt
 
 WORKDIR         /usr/libexec/git-core
 RUN             ln -s git git-merge
